--- a/29_FixCreateBalloon/FixCreateBalloon/FixCreateBalloon.csproj
+++ b/29_FixCreateBalloon/FixCreateBalloon/FixCreateBalloon.csproj
@@ -55,7 +55,9 @@
     <Reference Include="CaxGlobaltek">
       <HintPath>..\..\0_CaxGlobaltek\CaxGlobaltek\bin\Release\CaxGlobaltek.dll</HintPath>
     </Reference>
+    <Reference Include="DevComponents.DotNetBar.SuperGrid, Version=12.2.0.7, Culture=neutral, PublicKeyToken=c39c3242a43eee2b, processorArchitecture=MSIL" />
     <Reference Include="DevComponents.DotNetBar2, Version=12.2.0.7, Culture=neutral, PublicKeyToken=c39c3242a43eee2b, processorArchitecture=MSIL" />
+    <Reference Include="DevComponents.Instrumentation, Version=12.2.0.7, Culture=neutral, PublicKeyToken=bc4a9d761ea44ef0" />
     <Reference Include="NXOpen">
       <HintPath>..\..\..\Program Files (x86)\UGS\NX 7.5\UGII\managed\NXOpen.dll</HintPath>
     </Reference>
