2018/02/26，修正CreateFamilyPart沒有抓到所有的四階之後的檔案(治具檔案只有Inspection抓到其於沒被抓到)

--- a/31_EXE/Server/Server_PFMEA_NX75/Server_PFMEA_NX75/Server_PFMEA_NX75.csproj
+++ b/31_EXE/Server/Server_PFMEA_NX75/Server_PFMEA_NX75/Server_PFMEA_NX75.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Server_PFMEA_NX75</RootNamespace>
-    <AssemblyName>Server_PFMEA_NX75</AssemblyName>
+    <AssemblyName>C_S_PFMEA_NX75</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
