--- a/0_CaxGlobaltek/CaxGlobaltek/CaxGlobaltek.csproj
+++ b/0_CaxGlobaltek/CaxGlobaltek/CaxGlobaltek.csproj
@@ -100,6 +100,7 @@
     <Compile Include="CaxLog.cs" />
     <Compile Include="CaxME.cs" />
     <Compile Include="CaxMEUpLoad.cs" />
+    <Compile Include="CaxPartInformation.cs" />
     <Compile Include="CaxSQL.cs" />
     <Compile Include="CaxTEUpLoad.cs" />
     <Compile Include="CaxUpLoad.cs" />
